test/errors/offsets_error/zs/index_error.zs
package index_error;

struct IndexError
{
@index:
    string field[];
};
